--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="apple-touch-icon" href="logo192.png"/>
     <link rel="manifest" href="manifest.json"/>
-    <title>React App</title>
+    <title>Dollup</title>
 </head>
 <body class="h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
